--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 
           <audio
             controls hidden
+            id="js-audio"
             src="./img/situ.mp3">
             Your browser does not support the audio element.
           </audio>
